# triton

./: CMakeLists.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/actions/setup_base/: action.yml
.github/workflows/: build_wheel.yml
docs/: index.html
include/triton-c/: Dialects.h
include/triton/Conversion/TritonGPUToLLVM/: Utility.h
include/triton/Dialect/Triton/IR/: TritonOps.td
include/triton/Dialect/TritonGPU/IR/: TritonGPUAttrDefs.td
lib/: CMakeLists.txt
lib/CAPI/: CMakeLists.txt  Dialects.cpp
lib/Conversion/TritonToTritonGPU/: CMakeLists.txt  TritonGPUConversion.cpp  TritonToTritonGPUPass.cpp
lib/Dialect/Triton/IR/: Ops.cpp
lib/Dialect/TritonGPU/Transforms/: AccelerateMatmul.cpp  CoalesceAsyncCopy.cpp  OptimizeDotOperands.cpp  RemoveLayoutConversions.cpp
python/: CMakeLists.txt  TritonExtension.cpp  site_initialize_0.cpp
python/examples/: copy_strided.py
python/src/: ir.cc  passes.cc
python/triton/compiler/: code_generator.py
python/triton/language/: __init__.py  core.py  semantic.py
python/triton/runtime/: autotuner.py  interpreter.py
python/triton_mlir/: CMakeLists.txt  demoemitcapis.py  llvm_url.py  pyproject.toml  requirements.txt  runtime.py  setup.py
python/triton_mlir/dialects/: TritonNVIDIAGPUOps.td  TritonProtonOps.td  proton.py  triton_gpu.py  tt.py  ttg.py  ttng.py  ttpp.py
python/triton_mlir/test/: .gitignore  attn_fwd.ttgir  attn_fwd.ttir  complex_matmul.ttir  david.py  llvmir_pass.py  machine_function_pass.py  matmul_kernel.json  matmul_kernel.mlir  matmul_kernel.ttgir  matmul_kernel_david.ttgir  matmul_kernel_david_original.py  matmul_kernel_david_original.ttgir  matmul_kernel_david_tlp_fast.py  test_circt.py  test_compile.py  test_complex_matmul.py  test_e2e_matmul.py  test_eudsl_bindings.py  test_func.py  test_operator_overloading.py  test_other_dialects.py  test_runtime.py  test_smoke.py  test_types.py  test_v_pk.ll  test_value_caster.py  util.py
python/triton_mlir/test/SWDEV-512461/: 1_lp_original.amdgcn  1_lp_original.llir  1_lp_original.py  1_lp_original.ttgir  2_lp_decomp.amdgcn  2_lp_decomp.llir  2_lp_decomp.ttgir  3_tlp_sb1030.amdgcn  3_tlp_sb1030.llir  3_tlp_sb1030.ttgir  4_tlp_fast.py  4_tlp_fast.ttgir  gemm.py
python/triton_mlir/triton_mlir/: .gitignore  ArithToSMT.cpp  BlockedEncodingAttr_decls_defns.cpp.inc  BlockedEncodingAttr_nbclasses.cpp.inc  LowerContracts.cpp  MaxsMachineFunction.cpp  SliceEncodingAttr_decls_defns.cpp.inc  SliceEncodingAttr_nbclasses.cpp.inc  SwizzledSharedEncodingAttr_decls_defns.h.inc  SwizzledSharedEncodingAttr_nbclasses.cpp.inc  TritonExtension.cpp  __init__.py.in  compile.py  compiler.py  mlir.cpp  mlir.cpp.inc  passes.py  runtime.py  types.py
python/triton_mlir/triton_mlir/dialects/: TritonAMDGPUOps.td  TritonGPUOps.td  TritonNVGPUOps.td  TritonOps.td  amdgpu.py  smt.py  tt.py  ttg.py  ttpp.py  verif.py
python/tutorials/: 07-extern-functions.py
test/: CMakeLists.txt
test/Conversion/amd/: buffer_load_store.mlir
test/TritonGPU/amd/: amd-canonicalize-pointers-dont-run-mlir-canonicalizer.mlir  amd-canonicalize-pointers.mlir
